# artificial-forecaster

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  review-findings-2026-07-06.md  review-findings-2026-07-08.md  test_endpoint.py
notebooks/: runs_explorer.ipynb
scripts/: archive_model_data.py  archive_taf.py  build_climo.py  build_neighbors.py  build_radarsites.py  collect.py  compare_trend_scenarios.py  fetch_imagery.py  fetch_maps.py  fetch_terrain.py  grade_taf.py  gribstream_30h.py  gribstream_full_demo.py  harvest.sh  ping_models.py  poll_tafs.py  populate_runs_demo.py  prefetch_model_data.py  probe_bufkit_stations.py  probe_hrrr_mslp.py  probe_ifs.py  probe_stations_extended.py  probe_taf_cycles.py  render_meteogram.py  render_wx_timeline.py  schedule.py  score_taf.py  spend_report.py  test_agent.py  test_both_tools.py  test_bufkit.py  test_bufkit_point.py  test_climo.py  test_composite.py  test_emit_taf.py  test_endpoint.py  test_geo.py  test_gribstream.py  test_gribstream_mvp.py  test_iem_tool.py  (+33 more)
src/artificial_forecaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/forecaster/: agent.py  awc.py  charts.py  climo.py  config.py  fcstsounding.py  geo.py  gribstream.py  iem.py  imagery.py  llm.py  metar.py  modeldata.py  neighbors.py  radarsites.py  runlog.py  soundings.py  stations.py  store.py  taf.py  tafamend.py  tafarchive.py  tafgen.py  tafparse.py  tafskill.py  tafstate.py  tafver.py  terrain.py  tools.py  worksheet.py  wxcodes.py  wxmaps.py
